# io-test

./: .gitignore  Makefile  Readme.md
client/: Containerfile  entrypoint.sh  rebuild.sh
fs-rebuild/: Cargo.toml
fs-rebuild/src/: main.rs
k8s/: client-pod.yaml  client-trusted-pod.yaml  modules-claim.yaml  modules-volume.yaml  server-pod.yaml  server-service.yaml
pg-files/: Cargo.toml  Makefile
pg-files/src/: base.rs  main.rs  storage.rs
server/: Containerfile  entrypoint.sh  nginx.conf  split.sh
