[package]
name = "fs-rebuild"
version = "0.1.0"
authors = ["Alex Angelini <alex.louis.angelini@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "1.0.1"
clap = "2.33.3"
reqwest = { version = "0.11.2", features = ["blocking"] }
tar = "0.4.33"
thiserror = "1.0"
walkdir = "2.3.2"
zstd = "0.7.0"
